[package]
name = "CPoS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
blake3 = "1.3"
aes = "0.8"
cbc = "0.1.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"